# c_tools_lsp

./: .gitignore  CMakeLists.txt  PLAN.md  README.md  server_test.py  test_complexity.py  test_full_protocol.py  test_lsp.py
c-tools-lsp-vscode/: extension.js  package.json
src/: CMakeLists.txt  app_state.h  documents.c  framing.c  framing.h  handlers.c  handlers.h  main.c  rpc.c  rpc.h  rpc2.h  rpc2_ctx.c  rpc2_ctx.h  rpc2_framing.c  rpc2_framing.h  rpc2_process.c  rpc2_process.h  rpc2_request.c  rpc2_request.h  rpc2_timer.c  rpc2_timer.h  server.c  server.h  tool_runner.c  tool_runner.h  transport.c  transport.h  utils.c  utils.h
tests/: test.c
